delete latest post

--- a/_includes/selected_papers.liquid
+++ b/_includes/selected_papers.liquid
@@ -1,3 +1,7 @@
 <div class="publications">
   {% bibliography --group_by none --query @*[selected=true]* %}
+  <strong style="font-size: 16px;">ASIACRYPT 2023</strong><br>
+  <strong style="font-size: 16px;">ICML 2022</strong><br>
+  <strong style="font-size: 16px;">EUROCRYPT 2022</strong><br>
+  <strong style="font-size: 16px;">TDSC</strong><br>
 </div>
